# aoc-2024

./: Cargo.toml  README.md  git related commands.txt
advent1/src/: main.rs
advent10/: Cargo.toml
advent10/src/: main.rs
advent11/: Cargo.toml
advent14/: Cargo.toml
advent15/: .gitignore
advent15/src/: main.rs
advent16-wasm/: Cargo.toml  build-run.cmd  index.html
advent16-wasm/pkg/: advent16_wasm.d.ts  advent16_wasm.js  advent16_wasm_bg.wasm  advent16_wasm_bg.wasm.d.ts  package.json
advent16-wasm/src/: advent16.rs  lib.rs
advent17/: Cargo.toml
advent17/src/: main.rs
advent17_properly_done/: .gitignore  Cargo.toml
advent17_properly_done/src/: main.rs
advent18/src/: main.rs
advent2/src/: main.rs
advent21_testing/: Cargo.toml
advent22/src/: main.rs
advent24/src/: main.rs
advent3/src/: main.rs
advent5/: Cargo.toml
advent8/: Cargo.toml
advent9/src/: main.rs
src/: main.rs
